Proyecto2/cluster/rabbit-writer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-writer
  namespace: proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbit-writer
  template:
    metadata:
      labels:
        app: rabbit-writer
    spec:
      containers:
      - name: rabbit-writer
        image: 35.223.156.111:443/proyecto2/rabbit-writer:latest
        ports:
        - containerPort: 50051
      imagePullSecrets:
      - name: harbor-secret
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit-writer
  namespace: proyecto2
spec:
  selector:
    app: rabbit-writer
  ports:
  - port: 50051
    targetPort: 50051
    protocol: TCP
  type: ClusterIP
