Proyecto2/cluster/rust-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-api
  namespace: proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-api
  template:
    metadata:
      labels:
        app: rust-api
    spec:
      containers:
      - name: rust-api
        image: 34.70.50.55.nip.io/proyecto2/rust-api:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "510Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "300m"

---
apiVersion: v1
kind: Service
metadata:
  name: rust-api
  namespace: proyecto2
spec:
  selector:
    app: rust-api
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
